--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,12 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "box/spout": "^3.3",
         "laravel/framework": "^12.0",
-        "laravel/tinker": "^2.10.1"
+        "laravel/tinker": "^2.10.1",
+        "maatwebsite/excel": "^3.1",
+        "rap2hpoutre/fast-excel": "^5.6",
+        "spatie/simple-excel": "^3.7"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
